//  protoc --proto_path=. --go_out=. --go-grpc_out=require_unimplemented_servers=false:. stockpb/stock.proto
syntax = "proto3";

package stockpb;

option go_package = "./stockpb";

import "orderpb/order.proto";

service StockService {
    rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
    rpc CheckIfItemsInSrock(CheckIfItemsInSrockRequest) returns (CheckIfItemsInSrockResponse);
}

message GetItemsRequest {
    repeated string ItemIDs = 1;
}

message GetItemsResponse {
    repeated orderpb.Item Items = 1;
}

message CheckIfItemsInSrockRequest {
    repeated orderpb.ItemWithQuantity Items = 1;
}

message CheckIfItemsInSrockResponse {
    int32 InStock = 1;
    repeated orderpb.Item Items = 2;
}